syntax = "proto3";

package tragedylooper.v1;

import "tragedylooper/v1/effect.proto";
import "tragedylooper/v1/enums.proto";
import "tragedylooper/v1/common.proto";

option go_package = "github.com/constellation39/tragedyLooper/pkg/proto/v1";

// CardConfig 定义了卡牌的静态、不可变属性。
// 这表示卡牌在游戏规则书或脚本中的定义。
message CardConfig {
  // 此类卡牌的唯一标识符。
  int32 id = 1;
  // 卡牌的名称。
  string name = 2;
  // 卡牌效果的用户描述。
  string description = 3;
  // 卡牌的类型，用于分类和结算顺序。
  CardType card_type = 4 [json_name = "type"];
  // 允许使用此卡牌的角色。
  PlayerRole owner_role = 5;
  // 卡牌打出时产生的效果或效果链。
  CompoundEffect effect = 6;
  // 如果为真，此卡牌每循环只能成功打出一次。
  bool once_per_loop = 7;
  // 卡牌的优先级，用于确定同类型卡牌的结算顺序。
  int32 priority = 8;
}

// Card 表示玩家手牌中或场上的卡牌实例。
// 它结合了静态配置和动态、可变的状态。
message Card {
  // 卡牌的唯一ID，为方便起见从其配置中复制。
  int32 id = 1;
  // 卡牌的静态配置。
  CardConfig config = 2;
  // 该卡牌是否在当前循环中使用过。
  bool used_this_loop = 3;
  // 卡牌效果的最终确认目标，在任何所需的玩家选择后设置。
  Choice resolved_target = 4;
}

// CardList 是卡牌实例的集合，通常代表玩家的手牌。
message CardList {
  // 卡片实例列表。
  repeated Card cards = 1;
}

